trunk/Archive2/be/fe130b0b897baf/output
main.cpp:3:1: error: 'InterProcessData' does not name a type
 InterProcessData::InterProcessData()
 ^
